# 01_SM05

./: CMakeLists.txt  README.md  calculategrade.cpp  calculategrade.h  checkinservices.cpp  checkinservices.h  constants.h  dbfacade.cpp  dbfacade.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindowstate.cpp  mainwindowstate.h  resourcesSM05.qrc  settings.ini  stretchlabel.cpp  stretchlabel.h  ui_mainwindow.h
